--- a/gcmapp/Base.lproj/Main.storyboard
+++ b/gcmapp/Base.lproj/Main.storyboard
@@ -1129,9 +1129,9 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="App_Banner" translatesAutoresizingMaskIntoConstraints="NO" id="SLM-8B-vXg">
                                 <rect key="frame" x="0.0" y="20" width="600" height="78"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ministry Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tlU-0j-bNl">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Ministry Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tlU-0j-bNl">
                                 <rect key="frame" x="30" y="41" width="570" height="36"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -1399,15 +1399,14 @@
                         <color key="barTintColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                     </tabBar>
                     <connections>
-                        <segue destination="fHj-H2-BA2" kind="relationship" relationship="viewControllers" id="u3x-fY-Wks"/>
                         <segue destination="9pv-A4-QxB" kind="relationship" relationship="viewControllers" id="u7Y-xg-7CH"/>
-                        <segue destination="QTn-I7-ysP" kind="relationship" relationship="viewControllers" id="3d4-U8-cTU"/>
+                        <segue destination="fHj-H2-BA2" kind="relationship" relationship="viewControllers" id="u3x-fY-Wks"/>
                         <segue destination="OHY-9d-js3" kind="relationship" relationship="viewControllers" id="OJN-qI-bME"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-524" y="246"/>
+            <point key="canvasLocation" x="-506" y="258"/>
         </scene>
         <!--Page View Controller-->
         <scene sceneID="9FT-4n-wef">
@@ -1519,7 +1518,7 @@
             <objects>
                 <tableViewController id="QTn-I7-ysP" customClass="measurmentsController" customModule="GMA" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="2k6-kN-ZpY">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="551"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <view key="tableHeaderView" contentMode="scaleToFill" id="LnW-bf-VmM">
