--- a/gcmapp/Base.lproj/Main.storyboard
+++ b/gcmapp/Base.lproj/Main.storyboard
@@ -1129,25 +1129,29 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="App_Banner" translatesAutoresizingMaskIntoConstraints="NO" id="SLM-8B-vXg">
                                 <rect key="frame" x="0.0" y="20" width="600" height="78"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Ministry Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tlU-0j-bNl">
-                                <rect key="frame" x="30" y="41" width="570" height="36"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ministry Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tlU-0j-bNl">
+                                <rect key="frame" x="30" y="44" width="570" height="29"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" apportionsSegmentWidthsByContent="YES" segmentControlStyle="plain" momentary="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8tl-x7-5DH">
-                                <rect key="frame" x="0.0" y="97" width="600" height="29"/>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" apportionsSegmentWidthsByContent="YES" segmentControlStyle="plain" momentary="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8tl-x7-5DH">
+                                <rect key="frame" x="0.0" y="98" width="600" height="37"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="36" id="Cpl-Py-30x"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="42" id="T96-zL-UHo"/>
+                                </constraints>
                                 <segments>
                                     <segment title="&lt;&lt;"/>
                                     <segment title="Period" enabled="NO"/>
                                     <segment title="&gt;&gt;"/>
                                 </segments>
                                 <connections>
-                                    <action selector="periodChanged:" destination="QTn-I7-ysP" eventType="valueChanged" id="jTP-9h-ODK"/>
+                                    <action selector="periodChanged:" destination="fHj-H2-BA2" eventType="valueChanged" id="SjT-pV-vfA"/>
                                 </connections>
                             </segmentedControl>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="k1X-O5-8qE">
-                                <rect key="frame" x="0.0" y="216" width="600" height="264"/>
+                                <rect key="frame" x="0.0" y="224" width="600" height="264"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="topShadow" translatesAutoresizingMaskIntoConstraints="NO" id="Zxc-0d-3gS">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="12"/>
@@ -1193,7 +1197,7 @@
                                 </variation>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Eln-Hm-RbS">
-                                <rect key="frame" x="0.0" y="570" width="600" height="264"/>
+                                <rect key="frame" x="0.0" y="578" width="600" height="264"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="topShadow" translatesAutoresizingMaskIntoConstraints="NO" id="YMy-3U-H9w">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="12"/>
@@ -1241,7 +1245,7 @@
                                 </variation>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Sqq-92-6nS">
-                                <rect key="frame" x="0.0" y="924" width="600" height="264"/>
+                                <rect key="frame" x="0.0" y="932" width="600" height="264"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="topShadow" translatesAutoresizingMaskIntoConstraints="NO" id="0S5-4y-i6k">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="12"/>
@@ -1287,7 +1291,7 @@
                                 </variation>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hdk-8A-EQh">
-                                <rect key="frame" x="0.0" y="126" width="600" height="90"/>
+                                <rect key="frame" x="0.0" y="134" width="600" height="90"/>
                                 <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="24"/>
                                 <state key="normal" title="Faith Actions" image="Measurements_FaithActions_icon">
@@ -1298,7 +1302,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RDf-DO-7G7">
-                                <rect key="frame" x="0.0" y="480" width="600" height="90"/>
+                                <rect key="frame" x="0.0" y="488" width="600" height="90"/>
                                 <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                 <state key="normal" title="Fruit" image="Measurements_Fruit_icon">
@@ -1310,7 +1314,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Rk-kw-Vr2">
-                                <rect key="frame" x="0.0" y="834" width="600" height="90"/>
+                                <rect key="frame" x="0.0" y="842" width="600" height="90"/>
                                 <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                 <state key="normal" title="Outcomes" image="Measurements_Outcomes_icon">
@@ -1380,7 +1384,7 @@
                         <outlet property="measurementsViewOutcomesHeight" destination="bQl-aD-cNN" id="M4K-Lm-WDQ"/>
                         <outlet property="ministryNameLabel" destination="tlU-0j-bNl" id="NOi-uf-yoa"/>
                         <outlet property="outcomesHeader" destination="0Rk-kw-Vr2" id="sgL-EO-8d5"/>
-                        <outlet property="periodSelector" destination="8tl-x7-5DH" id="cmX-hg-t6i"/>
+                        <outlet property="periodControl" destination="8tl-x7-5DH" id="mkh-ep-jbF"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9EB-vU-sze" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1466,7 +1470,8 @@
                                     <constraint firstAttribute="width" constant="150" id="f5N-7U-itO"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="85"/>
-                                <state key="normal" title="5" backgroundImage="numberCircle">
+                                <state key="normal" title="7" backgroundImage="numberCircle">
+                                    <color key="titleColor" red="0.050980392156862744" green="0.098039215686274508" blue="0.19215686274509805" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <variation key="default">
@@ -1475,7 +1480,7 @@
                                     </mask>
                                 </variation>
                                 <connections>
-                                    <segue destination="AQB-UJ-YKg" kind="show" id="VRE-1l-B2p"/>
+                                    <segue destination="AQB-UJ-YKg" kind="show" identifier="showMeasurementDetail" id="VRE-1l-B2p"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Measurement Description" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ejB-hd-vb2">
@@ -1511,7 +1516,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4t3-bY-4HR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1264" y="1506"/>
+            <point key="canvasLocation" x="-1264" y="1514"/>
         </scene>
         <!--LMI-->
         <scene sceneID="2YO-SK-CaX">
@@ -2171,6 +2176,6 @@
         <image name="topShadow" width="1080" height="35"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Bea-dd-n6d"/>
+        <segue reference="VRE-1l-B2p"/>
     </inferredMetricsTieBreakers>
 </document>
